[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" ,features = ["guest-std"]}
serde_derive = "1.0.197"
types = { path = "../types" }
serde_json = "1.0.87"
