[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.73"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "=0.6.5"
rmp-serde = "1.3.0"
